feat: criando documentação no swagger para as carteiras e corrigindo o README
